fix alignment (left/right no worky)

--- a/.config/walker/themes/tokyo-night-black.css
+++ b/.config/walker/themes/tokyo-night-black.css
@@ -57,7 +57,7 @@ slider,
   border-radius: 6px;
   background: @background;
   padding: 32px;
-  border: 1px solid lighter(@background);
+  border: 2px solid @color6;
   box-shadow:
     0 19px 38px rgba(0, 0, 0, 0.3),
     0 15px 12px rgba(0, 0, 0, 0.22);
@@ -119,7 +119,8 @@ child {
 
 child:selected,
 child:hover {
-  background: alpha(@color6, 0.4);
+  background: alpha(@color0, 0.8);
+  border: 1px solid @color6;
 }
 
 #item {
